# Django-Mercury-Performance-Testing

./: .env.template  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  deploy.sh  pyproject.toml  requirements.txt
django_mercury/: __init__.py  config.py  export.py  monitor.py  n_plus_one.py  summary.py
django_mercury/management/: __init__.py
django_mercury/management/commands/: __init__.py  mercury_test.py
django_mercury/python_bindings/: constants.py  django_integration.py  django_integration_mercury.py
django_mercury_performance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
temp_issues/: 01-no-color-env-var.md  02-summary-report.md  03-django-management-command.md  05-html-report-export.md  README.md
tests/: __init__.py  test_config.py  test_monitor.py  test_n_plus_one.py
